--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
     <title>Quick Tip</title>
   </head>
   <body>
-    <main >
+    <main oninput="update()" >
       <h1>Quick Tip</h1>
       <section>
         <div class="bill">
@@ -20,7 +20,8 @@
           <input 
             type="number" 
             placeholder="Your bill" 
-            id="yourBill"  />
+            id="yourBill" 
+            />
         </div>
         <div>
           <div class="space-between">
